--- a/Soon.theme.css
+++ b/Soon.theme.css
@@ -25,7 +25,7 @@ Do NOT modify this file if you dont know what youre doing.
  * Main Source File 
  * DON'T REMOVE!
 */
-@import url("https://satanadesigns.github.io/soon/main/soon.css");
+@import url("https://github.com/MadzKami/themedrdan/blob/main/test.css");
 @import url("https://satanadesigns.github.io/soon/main/extra/palette.css");
 
 
