--- a/daandr.theme.css
+++ b/daandr.theme.css
@@ -25,7 +25,7 @@
   --homeImageSize: cover;
   --themeColor1: #3E3E3E;
   --themeColor2: #C4C4C4;
-  --customFont: Open Sans;
+  --customFont: Roboto;
   --backgroundCode: rgba(0 0 0 /.5);
   --backgroundName: rgba(0 0 0 /.5);
   --rs-small-spacing: 2px;
